creation page d'acceuil

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 
-baseURL = "http://localhost:1313/"
+baseURL = "https://tonpseudo.github.io/mon-portfolio/"
 languageCode = "en-us"
 title = "Josue Elnathan | Data Analyst"
 
