ajout de la page bloc et redaction du premier article

--- a/hugo.toml
+++ b/hugo.toml
@@ -6,4 +6,6 @@ title = "Josue Elnathan | Data Analyst"
 relativeURLs = true
 canonifyURLs = true
 
+[params]
+commentsFormAction = "https://formspree.io/f/meelagqp"
 
